--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "bootstrap": "^4.3.1",
+    "gridsome": "^0.7.0",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1"
   }
 }
